--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Yagnesh's Portfolio</h1>
+        <h1>Yagnesh Jariwala's Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
